--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <properties>
         <selenium.java.version>4.34.0</selenium.java.version>
         <logback.version>1.5.18</logback.version>
-        <webdriver.manager.version>6.1.0</webdriver.manager.version>
         <testng.version>7.11.0</testng.version>
         <jackson.version>2.19.0</jackson.version>
         <!-- plugins versions -->
@@ -36,14 +35,6 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-        <!-- web-driver manager for local testing -->
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>${webdriver.manager.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- To deserialize json into Java object or vice versa -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -56,6 +47,24 @@
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.35.2</version> </dependency>
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.35.0</version> </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-sheets</artifactId>
+            <version>v4-rev612-1.25.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.43.1</version>
         </dependency>
     </dependencies>
     <build>
